tests/errors/comprehensive/E2017_trailing_comma.ez
/*
 * Error Test: E2017 - trailing-comma-array
 * Expected: "trailing comma"
 */

do main() {
    temp arr [int] = {1, 2, 3,}  // Trailing comma
}
